# mekubbal

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  unified_workspace.html
.github/: copilot-instructions.md
configs/: initial-loop.toml  profile-matrix-daily.toml  profile-matrix.toml  profile-runner-daily-short-history.toml  profile-runner-daily.toml  profile-runner.toml  profile-schedule-daily.toml  profile-schedule.toml  research-control.candidate.toml  research-control.daily-base.toml  research-control.daily-candidate.toml  research-control.daily-short-base.toml  research-control.daily-short-candidate.toml  research-control.toml
reports/: dashboard.html  pairwise.csv  pairwise.html  pairwise_significance.csv  pairwise_significance.html  profile_aggregate.csv  profile_aggregate.html  profile_aggregate_leaderboard.csv  profile_aggregate_leaderboard.html  profile_matrix_workspace.html  profile_pairwise.csv  profile_pairwise.html  profile_pairwise_across_symbols.csv  profile_pairwise_across_symbols.html  profile_selection_state.json  profile_summary.csv  profile_symbol_summary.csv  profile_workspace.html
tests/: test_ablation.py  test_config_hardening.py  test_control.py  test_data_gates.py  test_diagnostics.py  test_edge_cases.py  test_env.py  test_experiment_log.py  test_features.py  test_initial_loop.py  test_leaderboards.py  test_multi_symbol.py  test_multi_symbol_runtime.py  test_paper.py  test_profile_alerts.py  test_profile_backfill.py  test_profile_compare.py  test_profile_config.py  test_profile_ensemble.py  test_profile_ensemble_runtime.py  test_profile_ensemble_sweep.py  test_profile_health_summary.py  test_profile_matrix.py  test_profile_monitor.py  test_profile_output.py  test_profile_rollback.py  test_profile_runner.py  test_profile_schedule.py  test_profile_schedule_config.py  test_profile_schedule_output.py  test_profile_schedule_rollback_runtime.py  test_profile_schedule_runtime.py  test_profile_schedule_shadow_runtime.py  (+13 more)
(+91 files in other folders)
